# folder

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: cli.rs  folder.rs  main.rs
src/cli/: mod.rs
src/folder/: mod.rs
